# imdb_qa_pgvector_langchain

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: load_data.py  preprocess.py
db/: connect.py  init_db.py  vector_store.py
embedding/: embed.py
query/: formatter.py  search.py  summarize.py
retriever/: memory_chain.py
schema/: query_output.py
